--- a/book/book.tex
+++ b/book/book.tex
@@ -1384,7 +1384,7 @@ Inicia el intérprete de Python y úsalo como una calculadora.
 
 Una de las características más poderosas de un lenguaje de programación es la
 posibilidad de manipular {\bf variables}.  Una variable es un nombre que
-hace referencia a un valor.
+se refiere a un valor.
 \index{variable}
 
 
@@ -1555,7 +1555,7 @@ Por ejemplo, si usas Python como una calculadora, puedes escribir
 \end{verbatim}
 
 La primera línea asigna un valor a {\tt millas}, pero no tiene un efecto
-visible.  La segunda línea es una expresión, por lo cual el
+visible.  La segunda línea es una expresión, por lo que el
 intérprete la evalúa y muestra el resultado.  Resulta que una
 maratón es de unos 42 kilómetros.
 
@@ -1764,14 +1764,14 @@ lo que hace.
 
 \begin{description}
 
-\item[variable:]  Un nombre que hace referencia a un valor.
+\item[variable:]  Un nombre que se refiere a un valor.
 \index{variable}
 
 \item[asignación:]  Una sentencia que asigna un valor a una variable.
 \index{asignación}
 
 \item[diagrama de estado:]  Una representación gráfica de un conjunto de variables y los
-valores a los cuales hacen referencia.
+valores a los cuales se refieren.
 \index{diagrama de estado}
 
 \item[palabra clave:]  Una palabra reservada que se usa como parte de la sintaxis
@@ -2423,7 +2423,7 @@ creas una variable afuera de todas las funciones, esta pertenece a
 
 \index{main}
 
-Cada parámetro hace referencia al mismo valor que su argumento
+Cada parámetro se refiere al mismo valor que su argumento
 correspondiente.  Así que, {\tt parte1} tiene el mismo valor que
 {\tt linea1}, {\tt parte2} tiene el mismo valor que {\tt linea2}
 y {\tt bruce} tiene el mismo valor que {\tt cat}.
@@ -2605,7 +2605,7 @@ especificando su nombre, parámetros y las sentencias que contiene.
 \index{definición de función}
 
 \item[objeto de función:]  Un valor creado por una definición de función.
-El nombre de la función es una variable que hace referencia a un objeto
+El nombre de la función es una variable que se refiere a un objeto
 de función.
 \index{objeto de función}
 
@@ -2673,7 +2673,7 @@ o una sentencia como parte de una sentencia más grande.
 \index{flujo de ejecución}
 
 \item[diagrama de pila:]  Una representación de una pila de funciones,
-sus variables y los valores a los que hacen referencia.
+sus variables y los valores a los cuales estos se refieren.
 \index{stack diagram}
 
 \item[marco:]  Un recuadro en un diagrama de pila que representa una llamada a función.
@@ -2876,7 +2876,7 @@ Al imprimir {\tt bob} se muestra algo como:
 <turtle.Turtle object at 0xb7bfbf4c>
 \end{verbatim}
 %
-Esto significa que {\tt bob} hace referencia a un objeto con tipo
+Esto significa que {\tt bob} se refiere a un objeto con tipo
 {\tt Turtle}
 como se define en el módulo {\tt turtle}.
 
@@ -3066,7 +3066,7 @@ definición de función.  La siguiente línea, {\tt cuadrado(bob)}, está alinea
 el margen izquierdo, lo cual indica el término tanto del bucle {\tt for}
 como de la definición de función.
 
-Dentro de la función, {\tt t} hace referencia a la misma tortuga {\tt bob}, por lo que
+Dentro de la función, {\tt t} se refiere a la misma tortuga {\tt bob}, por lo que
 {\tt t.lt(90)} tiene el mismo efecto que {\tt bob.lt(90)}.  En ese
 caso, ¿por qué no
 llamar al parámetro {\tt bob}?  La idea es que {\tt t} puede ser cualquier
@@ -5379,7 +5379,7 @@ Pero primero quiero decir un poco más sobre la asignación de variables.
 
 Como habrás descubierto, es legal hacer más de una
 asignación a la misma variable.  Una nueva asignación hace que una variable existente
-haga referencia a un nuevo valor (y deje de hacer referencia al valor antiguo).
+se refiera a un nuevo valor (y deje de referirse al valor antiguo).
 
 \begin{verbatim}
 >>> x = 5
@@ -5564,7 +5564,7 @@ def sucesion(n):
 La condición para este bucle es {\tt n != 1}, por lo que el bucle continuará
 hasta que {\tt n} sea {\tt 1}, lo cual hace que la condición sea falsa.
 
-Cada vez que se pasa por el bucle, el programa muestra el valor de {\tt n}
+En cada paso por el bucle, el programa muestra el valor de {\tt n}
 y luego verifica si es par o impar.  Si es par, {\tt n} se
 divide por 2.  Si es impar, el valor de {\tt n} se reemplaza por
 {\tt n*3 + 1}. Por ejemplo, si el argumento pasado a {\tt sucesion}
@@ -6093,7 +6093,7 @@ for letra in fruta:
     print(letra)
 \end{verbatim}
 %
-Cada vez que se pasa por el bucle, el siguiente carácter en la cadena se asigna
+En cada paso por el bucle, el siguiente carácter en la cadena se asigna
 a la variable {\tt letra}.  El bucle continúa hasta que no quedan
 caracteres.
 \index{concatenación}
@@ -6552,7 +6552,7 @@ Ahora cuando ejecuto el programa de nuevo, obtengo más información:
 IndexError: string index out of range
 \end{verbatim}
 %
-La primera vez que se pasa por el bucle, el valor de {\tt j} es 4,
+En el primer paso por el bucle, el valor de {\tt j} es 4,
 lo cual está fuera de rango para la cadena \verb"'pots'".
 El índice del último carácter es 3, por lo que el
 valor inicial para {\tt j} debería ser {\tt len(palabra2)-1}.
@@ -6594,7 +6594,7 @@ segundo error en esta función.
 
 \begin{description}
 
-\item[objeto:] Algo a lo cual una variable puede hacer referencia.  Por ahora,
+\item[objeto:] Algo a lo cual una variable puede referirse.  Por ahora,
 puedes usar ``objeto'' y ``valor'' indistintamente.
 \index{objeto}
 
@@ -6696,7 +6696,7 @@ etc.
 'bnn'
 \end{verbatim}
 
-Un tamaño de paso de -1 pasa a través de la palabra hacia atrás, por lo cual
+Un tamaño de paso de -1 pasa a través de la palabra hacia atrás, por lo que
 el trozo \verb"[::-1]" genera una cadena invertida.
 \index{palíndromo}
 
@@ -7105,8 +7105,8 @@ def es_abecedario(palabra):
     return True
 \end{verbatim}
 %
-Este bucle comienza con {\tt i=0} y termina cuando {\tt i=len(palabra)-1}.  Cada
-vez que se pasa por el bucle, compara al $i$-ésimo carácter (que puedes
+Este bucle comienza con {\tt i=0} y termina cuando {\tt i=len(palabra)-1}.  En cada
+paso por el bucle, compara al $i$-ésimo carácter (que puedes
 pensarlo como el carácter actual) con el $i+1$-ésimo carácter (que puedes
 pensarlo como el siguiente).
 
@@ -7409,7 +7409,7 @@ solía ser 123, ahora es 5.
 
 La Figura~\ref{fig.liststate} muestra
 el diagrama de estado para {\tt
-quesos}, {\tt numeros} y {\tt vacio}:
+quesos}, {\tt numeros} y {\tt vacio}.
 \index{diagrama de estado}
 \index{estado!diagrama de}
 
@@ -7421,11 +7421,11 @@ quesos}, {\tt numeros} y {\tt vacio}:
 \end{figure}
 
 Las listas se representan por cajas con la palabra ``lista'' por fuera
-y los elementos de la lista por dentro.  {\tt quesos} hace referencia a
+y los elementos de la lista por dentro.  {\tt quesos} se refiere a
 una lista con tres elementos con índices 0, 1 y 2.
 {\tt numeros} contiene dos elementos; el diagrama muestra que el
 valor del segundo elemento ha sido reasignado de 123 a 5.
-{\tt vacio} hace referencia a una lista sin elementos.
+{\tt vacio} se refiere a una lista sin elementos.
 \index{asignación de ítem}
 \index{ítem!asignación de}
 \index{reasignación}
@@ -7493,7 +7493,7 @@ for i in range(len(numeros)):
 Este bucle recorre la lista y actualiza cada elemento.  {\tt len}
 devuelve el número de elementos en la lista.  {\tt range} devuelve
 una lista de índices de 0 a $n-1$, donde $n$ es el largo de
-la lista.  Cada vez que se pasa por el bucle {\tt i} obtiene el índice
+la lista.  En cada paso por el bucle, {\tt i} obtiene el índice
 del siguiente elemento.  La sentencia de asignación en el cuerpo usa
 {\tt i} para leer el valor antiguo del elemento y asignar el
 nuevo valor.
@@ -7569,7 +7569,7 @@ El operador de trozo también funciona en las listas:
 \end{verbatim}
 %
 Si omites el primer índice, el trozo comienza al principio.
-Si omites el segundo, el trozo llega al final.  Entonces si
+Si omites el segundo, el trozo llega al final.  Entonces, si
 omites ambos, el trozo es una copia de la lista completa.
 \index{lista!copia}
 \index{trozo!copia}
@@ -7674,7 +7674,7 @@ el resultado.
 \index{None!valor especial}
 
 
-\section{Mapeo, filtro y reducción}
+\section{Mapa, filtro y reducción}
 \label{filter}
 
 Para sumar todos los números de una lista, puedes usar un bucle como este:
@@ -7689,7 +7689,7 @@ def sumar_todos(t):
     return total
 \end{verbatim}
 %
-{\tt total} se inicializa en 0.  Cada vez que se pasa por el bucle,
+{\tt total} se inicializa en 0.  En cada paso por el bucle,
 {\tt x} obtiene un elemento de la lista.  El operador {\tt +=}
 proporciona una manera corta de actualizar una variable.  Esta
 {\bf sentencia de asignación aumentada},
@@ -7709,7 +7709,7 @@ es equivalente a
 \end{verbatim}
 %
 A medida que el bucle se ejecuta, {\tt total} acumula la suma de los
-elementos; una variable que se usa de esta manera a veces se llama
+elementos; una variable que se usa de esta manera a veces es llamada
 {\bf acumulador}.
 \index{acumulador de suma}
 
@@ -7723,7 +7723,7 @@ que Python la facilita como función incorporada, {\tt sum}:
 \end{verbatim}
 %
 Una operación como esta que combina una secuencia de elementos en
-un solo valor a veces se llama {\bf reducción}.
+un solo valor a veces es llamada {\bf reducción}.
 \index{patrón de reducción}
 \index{reducción!patrón de}
 \index{recorrido}
@@ -7740,18 +7740,18 @@ def todas_con_mayuscula(t):
     return res
 \end{verbatim}
 %
-{\tt res} se inicializa con una lista vacía; cada vez que se pasa por el bucle,
+{\tt res} se inicializa con una lista vacía; en cada paso por el bucle,
 anexamos el elemento siguiente.  Entonces {\tt res} es otro
 tipo de acumulador.
 \index{acumulador lista}
 
-Una operación como \verb"todas_con_mayuscula" a veces se llama {\bf
-mapeo} porque ``mapea'' una función (en este caso el método {\tt
+Una operación como \verb"todas_con_mayuscula" a veces es llamada {\bf
+mapa} porque ``mapea'' una función (en este caso el método {\tt
 capitalize}) sobre cada uno de los elementos en una secuencia.
-\index{patrón de mapeo}
-\index{mapeo!patrón de}
-\index{filter pattern}
-\index{pattern!filter}
+\index{patrón de mapa}
+\index{mapa!patrón de}
+\index{patrón de filtro}
+\index{filtro!patrón de}
 
 Otra operación común es seleccionar algunos de los elementos de
 una lista y devolver una sublista.  Por ejemplo, la siguiente
@@ -7774,7 +7774,7 @@ Una operación como \verb"solo_mayusculas" se llama {\bf filtro} porque
 selecciona algunos de los elementos y filtra los otros.
 
 La mayoría de las operaciones de lista se pueden expresar como una combinación
-de mapeo, filtro y reducción.
+de mapa, filtro y reducción.
 
 
 \section{Eliminar elementos}
@@ -7850,7 +7850,7 @@ pero sin incluirlo.
 
 Una cadena es una secuencia de caracteres y una lista es una secuencia
 de valores, pero una lista de caracteres no es lo mismo que una
-cadena.  Para convertir de una cadena a una lista de caracteres,
+cadena.  Para convertir una cadena en una lista de caracteres,
 puedes usar {\tt list}:
 \index{list!función}
 \index{función!list}
@@ -7863,7 +7863,7 @@ puedes usar {\tt list}:
 \end{verbatim}
 %
 Dado que {\tt list} es el nombre de una función incorporada, deberías
-evitar usarlo como nombre de variable.  También evito {\tt l} porque
+evitar usarlo como nombre de variable.  Yo además evito {\tt l} porque
 se parece mucho a {\tt 1}.  Entonces por eso uso {\tt t}.
 
 La función {\tt list} separa la cadena en letras individuales.  Si
@@ -7932,11 +7932,11 @@ a = 'banana'
 b = 'banana'
 \end{verbatim}
 %
-Sabemos que {\tt a} y {\tt b} hacen referencia a una
+Sabemos que {\tt a} y {\tt b} se refieren a una
 cadena, pero no
-sabemos si hacen referencia a la {\em misma} cadena.
+sabemos si se refieren a la {\em misma} cadena.
 Hay dos estados posibles, mostrados en la Figura~\ref{fig.list1}.
-\index{aliasing}
+\index{alias}
 
 \begin{figure}
 \centerline
@@ -7945,13 +7945,13 @@ Hay dos estados posibles, mostrados en la Figura~\ref{fig.list1}.
 \label{fig.list1}
 \end{figure}
 
-En el primer caso, {\tt a} y {\tt b} hacen referencia a dos objetos diferentes que
-tienen el mismo valor.  En el segundo caso, hacen referencia al mismo
+En el primer caso, {\tt a} y {\tt b} se refieren a dos objetos diferentes que
+tienen el mismo valor.  En el segundo caso, se refieren al mismo
 objeto.
 \index{operador is}
 \index{is!operador}
 
-Para verificar si dos variables hacen referencia al mismo objeto, puedes
+Para verificar si dos variables se refieren al mismo objeto, puedes
 usar el operador {\tt is}.
 
 \begin{verbatim}
@@ -7962,7 +7962,7 @@ True
 \end{verbatim}
 %
 En este ejemplo, Python solo crea un objeto de cadena y tanto {\tt
-  a} como {\tt b} hacen referencia a este.  Pero cuando creas dos listas, obtienes
+  a} como {\tt b} se refieren a este.  Pero cuando creas dos listas, obtienes
 dos objetos:
 
 \begin{verbatim}
@@ -8001,12 +8001,12 @@ no es el mismo objeto.
 \index{valor}
 
 
-\section{Aliasing}
-\index{aliasing}
+\section{Alias}
+\index{alias}
 \index{reference!aliasing}
 
-If {\tt a} refers to an object and you assign {\tt b = a},
-then both variables refer to the same object:
+Si {\tt a} se refiere a un objeto y asignas {\tt b = a},
+entonces ambas variables se refieren al mismo objeto:
 
 \begin{verbatim}
 >>> a = [1, 2, 3]
@@ -8015,28 +8015,28 @@ then both variables refer to the same object:
 True
 \end{verbatim}
 %
-The state diagram looks like Figure~\ref{fig.list3}.
-\index{state diagram}
-\index{diagram!state}
+El diagrama de estado se ve como la Figura~\ref{fig.list3}.
+\index{diagrama de estado}
+\index{estado!diagrama de}
 
 \begin{figure}
 \centerline
 {\includegraphics[scale=0.8]{figs/list3.pdf}}
-\caption{State diagram.}
+\caption{Diagrama de estado.}
 \label{fig.list3}
 \end{figure}
 
-The association of a variable with an object is called a {\bf
-reference}.  In this example, there are two references to the same
-object.
-\index{reference}
+La asociación de una variable con un objeto se llama {\bf
+referencia}.  En este ejemplo, hay dos referencias al mismo
+objeto.
+\index{referencia}
 
-An object with more than one reference has more
-than one name, so we say that the object is {\bf aliased}.
-\index{mutability}
+Un objeto con más de una referencia tiene más
+de un nombre, por lo que decimos que el objeto tiene {\bf alias}.
+\index{mutabilidad}
 
-If the aliased object is mutable, changes made with one alias affect
-the other:
+Si el objeto con alias es mutable, los cambios realizados con un alias afectan
+al otro:
 
 \begin{verbatim}
 >>> b[0] = 42
@@ -8044,76 +8044,76 @@ the other:
 [42, 2, 3]
 \end{verbatim}
 %
-Although this behavior can be useful, it is error-prone.  In general,
-it is safer to avoid aliasing when you are working with mutable
-objects.
-\index{immutability}
+Aunque este comportamiento puede ser útil, es propenso a errores.  En general,
+es más seguro evitar los alias cuando trabajes con objetos
+mutables.
+\index{inmutabilidad}
 
-For immutable objects like strings, aliasing is not as much of a
-problem.  In this example:
+Para los objetos inmutables como las cadenas, los alias no son tan
+problemáticos.  En este ejemplo:
 
 \begin{verbatim}
 a = 'banana'
 b = 'banana'
 \end{verbatim}
 %
-It almost never makes a difference whether {\tt a} and {\tt b} refer
-to the same string or not.
+Casi nunca hace diferencia si {\tt a} y {\tt b} se refieren
+a la misma cadena o no.
 
 
-\section{List arguments}
+\section{Argumentos de lista}
 \label{list.arguments}
-\index{list!as argument}
-\index{argument}
-\index{argument!list}
-\index{reference}
-\index{parameter}
+\index{lista!como argumento}
+\index{argumento}
+\index{argumento de lista}
+\index{referencia}
+\index{parámetro}
 
-When you pass a list to a function, the function gets a reference to
-the list.  If the function modifies the list, the caller sees
-the change.  For example, \verb"delete_head" removes the first element
-from a list:
+Cuando pasas una lista a una función, la funcíon obtiene una referencia a
+la lista.  Si la función modifica la lista, la llamadora ve
+el cambio.  Por ejemplo, \verb"sin_cabeza" quita el primer elemento
+de una lista:
 
 \begin{verbatim}
-def delete_head(t):
+def sin_cabeza(t):
     del t[0]
 \end{verbatim}
 %
-Here's how it is used:
+Se usa de la siguiente manera:
 
 \begin{verbatim}
->>> letters = ['a', 'b', 'c']
->>> delete_head(letters)
->>> letters
+>>> letras = ['a', 'b', 'c']
+>>> sin_cabeza(letras)
+>>> letras
 ['b', 'c']
 \end{verbatim}
 %
-The parameter {\tt t} and the variable {\tt letters} are
-aliases for the same object.  The stack diagram looks like
-Figure~\ref{fig.stack5}.
-\index{stack diagram}
-\index{diagram!stack}
+El parámetro {\tt t} y la variable {\tt letras} son
+alias para el mismo objeto.  El diagrama de pila se ve como la
+Figura~\ref{fig.stack5}.
+\index{diagrama de pila}
+\index{pila!diagrama de}
 
 \begin{figure}
 \centerline
 {\includegraphics[scale=0.8]{figs/stack5.pdf}}
-\caption{Stack diagram.}
+\caption{Diagrama de pila.}
 \label{fig.stack5}
 \end{figure}
 
-Since the list is shared by two frames, I drew
-it between them.
+Dado que la lista es compartida por dos marcos, la dibujé
+entre estos.
 
-It is important to distinguish between operations that
-modify lists and operations that create new lists.  For
-example, the {\tt append} method modifies a list, but the
-{\tt +} operator creates a new list.
-\index{append method}
-\index{method!append}
-\index{list!concatenation}
-\index{concatenation!list}
+Es importante distinguir entre operaciones que
+modifican listas y operaciones que crean nuevas listas.  Por
+ejemplo, el método {\tt append} modifica una lista, pero el
+operador {\tt +} crea una nueva lista.
+\index{método append}
+\index{append!método}
+\index{lista!concatenación}
+\index{concatenación!lista}
 
-Here's an example using {\tt append}:
+Aquí hay un ejemplo que usa {\tt append}:
 %
 \begin{verbatim}
 >>> t1 = [1, 2]
@@ -8124,9 +8124,9 @@ Here's an example using {\tt append}:
 None
 \end{verbatim}
 %
-The return value from {\tt append} is {\tt None}.
+El valor de retorno de {\tt append} es {\tt None}.
 
-Here's an example using the {\tt +} operator:
+Aquí hay un ejemplo que usa el operador {\tt +}:
 %
 \begin{verbatim}
 >>> t3 = t1 + [4]
@@ -8136,51 +8136,51 @@ Here's an example using the {\tt +} operator:
 [1, 2, 3, 4]
 \end{verbatim}
 %
-The result of the operator is a new list, and the original list is
-unchanged.
+El resultado del operador es una nueva lista, y la lista original no ha
+cambiado.
 
-This difference is important when you write functions that
-are supposed to modify lists.  For example, this function
-{\em does not} delete the head of a list:
+Esta diferencia es importante cuando escribes funciones que
+se supone que modifican listas.  Por ejemplo, esta función
+{\em no} elimina la cabeza de una lista:
 %
 \begin{verbatim}
-def bad_delete_head(t):
-    t = t[1:]              # WRONG!
+def sin_cabeza_mal(t):
+    t = t[1:]              # ¡INCORRECTO!
 \end{verbatim}
 %
-The slice operator creates a new list and the assignment
-makes {\tt t} refer to it, but that doesn't affect the caller.
-\index{slice operator}
-\index{operator!slice}
+El operador de trozo crea una nueva lista y la asignación
+hace que {\tt t} se refiera a esta, pero eso no afecta a la llamadora.
+\index{operador de trozo}\index{slice}
+\index{trozo!operador de}
 %
 \begin{verbatim}
 >>> t4 = [1, 2, 3]
->>> bad_delete_head(t4)
+>>> sin_cabeza_mal(t4)
 >>> t4
 [1, 2, 3]
 \end{verbatim}
 %
-At the beginning of \verb"bad_delete_head", {\tt t} and {\tt t4}
-refer to the same list.  At the end, {\tt t} refers to a new list,
-but {\tt t4} still refers to the original, unmodified list.
+Al principio de \verb"sin_cabeza_mal", {\tt t} y {\tt t4}
+se refieren a la misma lista.  Al final, {\tt t} se refiere a una nueva lista,
+pero {\tt t4} aún se refiere a la original, la lista sin modificar.
 
-An alternative is to write a function that creates and
-returns a new list.  For
-example, {\tt tail} returns all but the first
-element of a list:
+Una alternativa es escribir una función que cree y
+devuelva una nueva lista.  Por
+ejemplo, {\tt cola} devuelve todos los elementos
+de una lista excepto el primero:
 
 \begin{verbatim}
-def tail(t):
+def cola(t):
     return t[1:]
 \end{verbatim}
 %
-This function leaves the original list unmodified.
-Here's how it is used:
+Esta función deja a la lista original sin modificar.
+Se usa de la siguiente manera:
 
 \begin{verbatim}
->>> letters = ['a', 'b', 'c']
->>> rest = tail(letters)
->>> rest
+>>> letra = ['a', 'b', 'c']
+>>> resto = cola(letras)
+>>> resto
 ['b', 'c']
 \end{verbatim}
 
@@ -8219,7 +8219,7 @@ siguiente operación que realices con {\tt t} falle.
 Antes de usar métodos y operadores de lista, deberías leer la
 documentación cuidadosamente y luego probarlos en modo interactivo.
 
-\item Pick an idiom and stick with it.
+\item Escoge una forma y quédate con esa.
 
 Parte del problema con las listas es que hay muchas
 maneras de hacer las cosas.  Por ejemplo, para eliminar un elemento de
@@ -8228,7 +8228,7 @@ o incluso una asignación de trozo.
 
 Para agregar un elemento, puedes usar el método {\tt append} o
 el operador {\tt +}.  Suponiendo que {\tt t} es una lista y
-{\tt x} es un elemento de lista, estos son correctos:
+{\tt x} es un elemento de lista, estas líneas son correctas:
 
 \begin{verbatim}
 t.append(x)
@@ -8236,7 +8236,7 @@ t = t + [x]
 t += [x]
 \end{verbatim}
 
-Y estos son incorrectos:
+Y estas son incorrectas:
 
 \begin{verbatim}
 t.append([x])          # ¡INCORRECTO!
@@ -8245,19 +8245,19 @@ t + [x]                # ¡INCORRECTO!
 t = t + x              # ¡INCORRECTO!
 \end{verbatim}
 
-Try out each of these examples in interactive mode to make sure
-you understand what they do.  Notice that only the last
-one causes a runtime error; the other three are legal, but they
-do the wrong thing.
+Prueba cada uno de estos ejemplos en modo interactivo para asegurarte
+de que entiendes lo que haces.  Nota que solo el último
+provoca un error de tiempo de ejecución; los otros tres son legales, pero
+hacen lo incorrecto.
 
 
-\item Make copies to avoid aliasing.
-\index{aliasing!copying to avoid}
-\index{copy!to avoid aliasing}
+\item Crea copias para evitar los alias.
+\index{alias!copiar para evitar}
+\index{copia!para evitar alias}
 
-If you want to use a method like {\tt sort} that modifies
-the argument, but you need to keep the original list as
-well, you can make a copy.
+Si quieres usar un método como {\tt sort} que modifique
+el argumento, pero necesitas mantener la lista original
+también, puedes crear una copia.
 
 \begin{verbatim}
 >>> t = [3, 1, 2]
@@ -8269,10 +8269,10 @@ well, you can make a copy.
 [1, 2, 3]
 \end{verbatim}
 
-In this example you could also use the built-in function {\tt sorted},
-which returns a new, sorted list and leaves the original alone.
-\index{sorted!function}
-\index{function!sorted}
+En este ejemplo podrías usar también la función incorporada {\tt sorted},
+que devuelve una nueva lista ordenada y deja sola a la original.
+\index{sorted!función}
+\index{función!sorted}
 
 \begin{verbatim}
 >>> t2 = sorted(t)
@@ -8297,54 +8297,54 @@ which returns a new, sorted list and leaves the original alone.
 también llamados ítems.
 \index{elemento}
 
-\item[nested list:] A list that is an element of another list.
-\index{nested list}
+\item[lista anidada:] Una lista que es un elemento de otra lista.
+\index{lista anidada}
 
-\item[accumulator:] A variable used in a loop to add up or
-accumulate a result.
-\index{accumulator}
+\item[acumulador:] Una variable usada en un bucle para sumar o
+acumular un resultado.
+\index{acumulador}
 
-\item[augmented assignment:] A statement that updates the value
-of a variable using an operator like \verb"+=".
-\index{assignment!augmented}
-\index{augmented assignment}
-\index{traversal}
+\item[asignación aumentada:] Una sentencia que actualiza el valor
+de una variable usando un operador como \verb"+=".
+\index{aumentada!asignación}
+\index{asignación aumentada}
+\index{recorrido}
 
-\item[reduce:] A processing pattern that traverses a sequence
-and accumulates the elements into a single result.
-\index{reduce pattern}
-\index{pattern!reduce}
+\item[reducción:] Un patrón de procesamiento que recorre una secuencia
+y acumula los elementos en un solo resultado.
+\index{patrón de reducción}
+\index{reducción!patrón de}
 
-\item[map:] A processing pattern that traverses a sequence and
-performs an operation on each element.
-\index{map pattern}
-\index{pattern!map}
+\item[mapa:] Un patrón de procesamiento que recorre una secuencia y
+realiza una operación en cada elemento.
+\index{patrón de mapa}
+\index{mapa!patrón de}
 
-\item[filter:] A processing pattern that traverses a list and
-selects the elements that satisfy some criterion.
-\index{filter pattern}
-\index{pattern!filter}
+\item[filtro:] Un patrón de procesamiento que recorre una lista y
+selecciona los elementos que satisfacen algún criterio.
+\index{patrón de filtro}
+\index{filtro!patrón de}
 
-\item[object:] Something a variable can refer to.  An object
-has a type and a value.
-\index{object}
+\item[objeto:] Algo a lo cual una variable puede referirse.  Un objeto
+tiene un tipo y un valor.
+\index{objeto}
 
-\item[equivalente:] Tener el mismo valor.
+\item[equivalente:] Que tiene el mismo valor.
 \index{equivalente}
 
-\item[idéntico:] Ser el mismo objeto (lo cual implica equivalencia).
+\item[idéntico:] Que es el mismo objeto (lo cual implica equivalencia).
 \index{idéntico}
 
-\item[reference:] The association between a variable and its value.
-\index{reference}
+\item[referencia:] La asociación entre una variable y su valor.
+\index{referencia}
 
-\item[aliasing:] A circumstance where two or more variables refer to the same
-object.
-\index{aliasing}
+\item[alias:] Una circunstancia donde dos o más variables se refieren al mismo
+objeto.
+\index{alias}
 
-\item[delimiter:] A character or string used to indicate where a
-string should be split.
-\index{delimiter}
+\item[delimitador:] Un carácter o cadena usado para indicar dónde
+debería separarse una cadena.
+\index{delimitador}
 
 \end{description}
 
@@ -8416,14 +8416,14 @@ Por ejemplo:
 
 
 \begin{exercise}
-Write a function called \verb"is_sorted" that takes a list as a
-parameter and returns {\tt True} if the list is sorted in ascending
-order and {\tt False} otherwise.  For example:
+Escribe una función llamada \verb"esta_ordenada" que tome una lista como
+parámetro y devuelva {\tt True} si la lista está ordenada de manera
+ascendente y {\tt False} si no.  Por ejemplo:
 
 \begin{verbatim}
->>> is_sorted([1, 2, 2])
+>>> esta_ordenada([1, 2, 2])
 True
->>> is_sorted(['b', 'a'])
+>>> esta_ordenada(['b', 'a'])
 False
 \end{verbatim}
 
@@ -8432,43 +8432,43 @@ False
 
 \begin{exercise}
 \label{anagram}
-\index{anagram}
+\index{anagrama}
 
-Two words are anagrams if you can rearrange the letters from one
-to spell the other.  Write a function called \verb"is_anagram"
-that takes two strings and returns {\tt True} if they are anagrams.
+Dos palabras son anagramas si puedes reordenar las letras de una
+para escribir la otra.  Escribe una función llamada \verb"es_anagrama"
+que tome dos cadenas y devuelva {\tt True} si son anagramas.
 \end{exercise}
 
 
 
 \begin{exercise}
 \label{duplicate}
-\index{duplicate}
-\index{uniqueness}
+\index{duplicado}
+\index{unicidad}
 
-Write a function called \verb"has_duplicates" that takes
-a list and returns {\tt True} if there is any element that
-appears more than once.  It should not modify the original
-list.
+Escribe una función llamada \verb"tiene_duplicados" que tome
+una lista y devuelva {\tt True} si hay algún elemento que
+aparece más de una vez.  No debería modificar la lista
+original.
 
 \end{exercise}
 
 
 \begin{exercise}
 
-This exercise pertains to the so-called Birthday Paradox, which you
-can read about at \url{http://en.wikipedia.org/wiki/Birthday_paradox}.
-\index{birthday paradox}
+Este ejercicio está relacionado con la denominada ``Paradoja del cumpleaños'', de la cual
+puedes leer en \url{http://es.wikipedia.org/wiki/Paradoja_del_cumpleaños}.
+\index{paradoja del cumpleaños}
 
-If there are 23 students in your class, what are the chances
-that two of you have the same birthday?  You can estimate this
-probability by generating random samples of 23 birthdays
-and checking for matches.  Hint: you can generate random birthdays
-with the {\tt randint} function in the {\tt random} module.
-\index{random module}
-\index{module!random}
-\index{randint function}
-\index{function!randint}
+Si hay 23 estudiantes en tu clase, ¿cuáles son las posibilidades
+de que dos de ustedes tengan el mismo cumpleaños?  Puedes estimar esta
+probabilidad generando muestras al azar de 23 cumpleaños
+y verificar coincidencias.  Pista: puedes generar cumpleaños al azar
+con la función {\tt randint} del módulo {\tt random}.
+\index{módulo random}
+\index{random!módulo}
+\index{función randint}
+\index{randint!función}
 
 Puedes descargar mi
 solución desde \url{http://thinkpython2.com/code/birthday.py}.
@@ -8478,20 +8478,20 @@ solución desde \url{http://thinkpython2.com/code/birthday.py}.
 
 
 \begin{exercise}
-\index{append method}
-\index{method append}
-\index{list!concatenation}
-\index{concatenation!list}
+\index{método append}
+\index{append!método}
+\index{lista!concatenación}
+\index{concatenación!lista}
 
-Write a function that reads the file {\tt words.txt} and builds
-a list with one element per word.  Write two versions of
-this function, one using the {\tt append} method and the
-other using the idiom {\tt t = t + [x]}.  Which one takes
-longer to run?  Why?
+Escribe una función que lea el archivo {\tt words.txt} y construya
+una lista con un elemento por palabra.  Escribe dos versiones de
+esta función, una usando el método {\tt append} y la
+otra usando la notación {\tt t = t + [x]}.  ¿Cuál toma más
+tiempo en ejecutar?  ¿Por qué?
 
-Solution: \url{http://thinkpython2.com/code/wordlist.py}.
-\index{time module}
-\index{module!time}
+Solución: \url{http://thinkpython2.com/code/wordlist.py}.
+\index{módulo time}
+\index{time!módulo}
 
 \end{exercise}
 
@@ -8499,66 +8499,66 @@ Solution: \url{http://thinkpython2.com/code/wordlist.py}.
 \begin{exercise}
 \label{wordlist1}
 \label{bisection}
-\index{membership!bisection search}
-\index{bisection search}
-\index{search, bisection}
-\index{membership!binary search}
-\index{binary search}
-\index{search, binary}
+\index{membership!búsqueda de bisección}
+\index{búsqueda de bisección}
+\index{bisección, búsqueda de}
+\index{membership!búsqueda binaria}
+\index{búsqueda binaria}
+\index{binaria, búsqueda}
 
-To check whether a word is in the word list, you could use
-the {\tt in} operator, but it would be slow because it searches
-through the words in order.
+Para verificar si una palabra está en la lista de palabras, podrías usar
+el operador {\tt in}, pero sería lento porque busca
+en orden a través de las palabras.
 
-Because the words are in alphabetical order, we can speed things up
-with a bisection search (also known as binary search), which is
-similar to what you do when you look a word up in the dictionary (the book, not the data structure).  You
-start in the middle and check to see whether the word you are looking
-for comes before the word in the middle of the list.  If so, you
-search the first half of the list the same way.  Otherwise you search
-the second half.
+Debido a que las palabras están en orden alfabético, podemos acelerar las cosas
+con una búsqueda de bisección (también conocida como búsqueda binaria), que es
+similar a lo que haces cuando buscas una palabra en el diccionario (el libro, no la estructura de datos).
+Comienzas en el medio y verificas si la palabra que buscas
+viene antes de la palabra en el medio de la lista.  Si es así,
+buscas en la primera mitad de la lista de la misma manera.  De lo contrario, buscas
+la segunda mitad.
 
-Either way, you cut the remaining search space in half.  If the
-word list has 113,809 words, it will take about 17 steps to
-find the word or conclude that it's not there.
+De cualquier manera, cortas por la mitad el espacio de búsqueda que queda.  Si la
+lista de palabras tiene 113,809 palabras, tomará alrededor de 17 pasos
+para encontrar la palabra o concluir que no está.
 
-Write a function called \verb"in_bisect" that takes a sorted list
-and a target value and returns {\tt True} if the word is
-in the list and {\tt False} if it's not.
-\index{bisect module}
-\index{module!bisect}
+Escribe una función llamada \verb"in_bisect" que tome una lista ordenada
+y un valor objetivo y devuelva {\tt True} si la palabra está
+en la lista y {\tt False} si no está.
+\index{módulo bisect}
+\index{bisect!módulo}
 
-Or you could read the documentation of the {\tt bisect} module
-and use that!  Solution: \url{http://thinkpython2.com/code/inlist.py}.
-
-\end{exercise}
-
-\begin{exercise}
-\index{reverse word pair}
-
-Two words are a ``reverse pair'' if each is the reverse of the
-other.  Write a program that finds all the reverse pairs in the
-word list.  Solution: \url{http://thinkpython2.com/code/reverse_pair.py}.
+¡O podrías leer la documentación del módulo {\tt bisect}
+y usar eso!  Solución: \url{http://thinkpython2.com/code/inlist.py}.
 
 \end{exercise}
 
 \begin{exercise}
-\index{interlocking words}
+\index{par de palabras reversas}
 
-Two words ``interlock'' if taking alternating letters from each forms
-a new word.  For example, ``shoe'' and ``cold''
-interlock to form ``schooled''.
-Solution: \url{http://thinkpython2.com/code/interlock.py}.
-Credit: This exercise is inspired by an example at \url{http://puzzlers.org}.
+Dos palabras son un ``par reverso'' si cada una es el reverso de la
+otra.  Escribe un programa que encuentre todos los pares reversos en la
+lista de palabras.  Solución: \url{http://thinkpython2.com/code/reverse_pair.py}.
+
+\end{exercise}
+
+\begin{exercise}
+\index{palabras entrelazadas}
+
+Dos palabras se ``entrelazan'' si tomando letras alternas de cada una se forma
+una nueva palabra.  Por ejemplo, ``shoe'' y ``cold''
+se entrelazan para formar ``schooled''.
+Solución: \url{http://thinkpython2.com/code/interlock.py}.
+Crédito: Este ejercicio está inspirado en un ejemplo de \url{http://puzzlers.org}.
 
 \begin{enumerate}
 
-\item Write a program that finds all pairs of words that interlock.
-  Hint: don't enumerate all pairs!
+\item Escribe un programa que encuentre todos los pares de palabras que se entrelazan.
+  Pista: ¡no revises todos los pares!
 
-\item Can you find any words that are three-way interlocked; that is,
-  every third letter forms a word, starting from the first, second or
-  third?
+\item ¿Puedes encontrar alguna palabra que sea un triple entrelazado; es decir,
+  leyendo cada tres letras se forma una palabra, comenzando con la primera, la segunda o
+  la tercera?
 
 \end{enumerate}
 \end{exercise}
